--- a/pages/18590.html
+++ b/pages/18590.html
@@ -563,9 +563,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(ʃ \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ʃ</mi><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(&amp;#643; \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -583,9 +583,9 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><merror><mtext>Unknown character</mtext></merror><msub><merror><mtext>Unknown character</mtext></merror> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>ʃ_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ʃ</mi> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>&amp;#643;_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
 </li>
 </ul>
 
@@ -599,9 +599,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -623,12 +623,12 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
 </li>
 </ul>
-<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><mi>ʃ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     &amp;&amp; id &amp;\dashv&amp; id 
     \\
@@ -650,7 +650,7 @@ margin-left: 0em;
     \\
     &amp;&amp; \vee &amp;&amp; \vee
     \\
-    &amp;\stackrel{cohesive}{}&amp; ʃ &amp;\dashv&amp; \flat &amp; \stackrel{discrete}{}
+    &amp;\stackrel{cohesive}{}&amp; &amp;#643; &amp;\dashv&amp; \flat &amp; \stackrel{discrete}{}
     \\
     &amp;&amp; \bot &amp;&amp; \bot
     \\
@@ -670,7 +670,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+algebra'>smooth algebra</a> (<math class='maruku-mathml' display='inline' id='mathml_bc4dadc6ccea74f2423c57ceb923d3e9e617c254_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup></mrow><annotation encoding='application/x-tex'>C^\infty</annotation></semantics></math>-ring)</p>
+<p><a class='existingWikiWord' href='/nlab/show/smooth+algebra'>smooth algebra</a> (<math class='maruku-mathml' display='inline' id='mathml_3b47471684993b9bb35ba620503a0d90ece059e7_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup></mrow><annotation encoding='application/x-tex'>C^\infty</annotation></semantics></math>-ring)</p>
 </li>
 
 <li>
@@ -877,6 +877,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/evolutionary+derivative'>evolutionary derivative</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Radon%E2%80%93Nikodym+derivative'>Radon-Nikodym derivative</a></p>
 </li>
 
@@ -922,14 +926,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  4, 2017 19:54:07 
+  Revised on November 30, 2017 07:35:46 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/derivative" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/derivative/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/derivative" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/derivative" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/derivative" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/derivative/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/derivative" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/derivative" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
