--- a/pages/5544.html
+++ b/pages/5544.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -500,12 +500,12 @@ margin-left: 0em;
 <div style='float: right; margin: 0 10px 10px 0;'>
 <img src='https://ncatlab.org/nlab/files/ChartsOfAManifold.png' width='400'/> 
 </div>
-<p>A <a class='existingWikiWord' href='/nlab/show/topological+manifold'>topological manifold</a> <math class='maruku-mathml' display='inline' id='mathml_1c8fd014d1838d4e5688b90ed863ef9749511037_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_1c8fd014d1838d4e5688b90ed863ef9749511037_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> is by definition a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> that is locally <a class='existingWikiWord' href='/nlab/show/homeomorphism'>homeomorphic</a> to a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_1c8fd014d1838d4e5688b90ed863ef9749511037_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>. A choice of such morphism</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1c8fd014d1838d4e5688b90ed863ef9749511037_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mover><mo>→</mo><mo>≃</mo></mover><mi>X</mi><msub><mo stretchy='false'>|</mo> <mrow><mi>im</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow></msub><mo>↪</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>
+<p>A <a class='existingWikiWord' href='/nlab/show/topological+manifold'>topological manifold</a> <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> is by definition a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> that is locally <a class='existingWikiWord' href='/nlab/show/homeomorphism'>homeomorphic</a> to a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>. A choice of such morphism</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mover><mo>→</mo><mo>≃</mo></mover><mi>X</mi><msub><mo stretchy='false'>|</mo> <mrow><mi>im</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow></msub><mo>↪</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>
   \phi : \mathbb{R}^n \stackrel{\simeq}{\to} X|_{im(\phi)} \hookrightarrow X
 
 </annotation></semantics></math></div>
-<p>is a <strong>coordinate system</strong> or <strong>coordinate chart</strong> or just <strong>chart</strong> on the <a class='existingWikiWord' href='/nlab/show/image'>image</a> of <math class='maruku-mathml' display='inline' id='mathml_1c8fd014d1838d4e5688b90ed863ef9749511037_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math>.</p>
+<p>is a <strong>coordinate system</strong> or <strong>coordinate chart</strong> or just <strong>chart</strong> on the <a class='existingWikiWord' href='/nlab/show/image'>image</a> of <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math>.</p>
 
 <p>This generalises to other sorts of <a class='existingWikiWord' href='/nlab/show/manifold'>manifolds</a>.</p>
 
@@ -562,17 +562,21 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on May  6, 2017 06:45:22 
+  Revised on November 30, 2017 07:38:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.218.150.85)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coordinate+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordinate+system/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/coordinate+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordinate+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/coordinate+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordinate+system/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/coordinate+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordinate+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
