--- a/pages/5259.html
+++ b/pages/5259.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -471,9 +471,37 @@ margin-left: 0em;
 
 <h2 id='concepts_2'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -511,7 +539,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -1256,7 +1284,7 @@ margin-left: 0em;
 
 <p>The <em>spectral action</em> is a natural <a class='existingWikiWord' href='/nlab/show/functional'>functional</a> on the space of <a class='existingWikiWord' href='/nlab/show/spectral+triple'>spectral triples</a>. It is essentially a regularized <a class='existingWikiWord' href='/nlab/show/heat+kernel'>heat kernel</a> expansion of the <a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a>-like operator in the spectral triple.</p>
 
-<p>Since a spectral triple encodes <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a> in a generalized context of <a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>noncommutative geometry</a>, a functional on a space of spectral triples is comparable to the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> functional on the space of ordinary Riemennian manifolds. And indeed, on spectral triples corresponding to ordinary Riemannian geometry the spectral action reduces to the Einstein-Hilbert action plus a series of integrals over higher <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> invariants. Moreover, by an incarnation of the <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>Kaluza-Klein mechanism</a>, on spectral triples corresponding toa Riemannian manifold times a non-classical space of classical dimension 0, the spectral action to first order is an <a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac+theory'>Einstein-Yang-Mills-Dirac theory</a> and in fact <a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac-Higgs+theory'>Einstein-Maxwell-Yang-Mills-Dirac-Higgs theory</a>, hence also includes <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>).</p>
+<p>Since a spectral triple encodes <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a> in a generalized context of <a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>noncommutative geometry</a>, a functional on a space of spectral triples is comparable to the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> functional on the space of ordinary Riemennian manifolds. And indeed, on spectral triples corresponding to ordinary Riemannian geometry the spectral action reduces to the Einstein-Hilbert action plus a series of integrals over higher <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> invariants. Moreover, by an incarnation of the <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>Kaluza-Klein mechanism</a>, on spectral triples corresponding to a Riemannian manifold times a non-classical space of classical dimension 0, the spectral action to first order is an <a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac+theory'>Einstein-Yang-Mills-Dirac theory</a> and in fact <a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac-Higgs+theory'>Einstein-Maxwell-Yang-Mills-Dirac-Higgs theory</a>, hence also includes <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>).</p>
 
 <h2 id='application_to_particle_phenomenology'>Application to particle phenomenology</h2>
 
@@ -1349,14 +1377,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 25, 2016 13:40:55 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.153.161)
+  Revised on December  3, 2017 14:52:34 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (146.198.56.78)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spectral+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spectral+action/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/spectral+action" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spectral+action" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/spectral+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spectral+action/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/spectral+action" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spectral+action" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
